implement entire branch microservice from another dotnet project
